# toms-lints

./: .gitignore  Cargo.toml  dylint.sh  justfile  rust-toolchain.toml
.github/instructions/: copilot.instructions.md
clippy/: Cargo.toml
clippy/src/: lib.rs
clippy/ui/: main.rs  main.stderr
control_flow/: Cargo.toml
control_flow/src/: lib.rs
control_flow/ui/: main.stderr
eol_comments/: Cargo.toml
eol_comments/src/: lib.rs
eol_comments/ui/: main.rs  main.stderr
nesting_depth/: .gitignore  Cargo.toml  README.md
nesting_depth/src/: config.rs  context.rs  debug.rs  lib.1.rs  lib.rs
nesting_depth/ui/: main.rs  main.stderr
nesting_too_deep/: Cargo.toml
nesting_too_deep/src/: lib.rs
nesting_too_deep/ui/: main.2  main.rs  main.stderr
src/: lib.rs
try_io_result/: Cargo.toml
try_io_result/src/: lib.rs
try_io_result/ui/: main.rs
uninlined_format_args/: .gitignore  Cargo.toml
uninlined_format_args/.github/instructions/: copilot-instructions.instructions.md
uninlined_format_args/src/: lib.rs
uninlined_format_args/ui/: lint_attributes.rs  lint_attributes.stderr  main.rs  main.stderr  positional.rs  positional.stderr
