[package]
name = "toms-lints"
version = "1.0.0"
authors = ["Tom Grushka"]
description = "Useful lints for dylint"
edition = "2024"

[workspace]
resolver = "3"
members = ["clippy", "eol_comments", "nesting_too_deep", "try_io_result", "uninlined_format_args"]

# constituent library: https://github.com/trailofbits/dylint/blob/master/utils/linting/README.md#constituent-feature
[lib]
crate-type = ["cdylib"]

[dependencies]
dylint_linting.workspace = true
nesting_too_deep = { path = "nesting_too_deep", features = ["rlib"] }
uninlined_format_args = { path = "uninlined_format_args", features = ["rlib"] }
eol_comments = { path = "eol_comments", features = ["rlib"] }

[workspace.dependencies]
anyhow = "1"
# clippy_utils = { git = "https://github.com/rust-lang/rust-clippy" }
clippy_config = { git = "https://github.com/rust-lang/rust-clippy" }
clippy_lints = { git = "https://github.com/rust-lang/rust-clippy" }
declare_clippy_lint = { git = "https://github.com/rust-lang/rust-clippy" }
thiserror = "2"

# dylint = "4.1.0"
# dylint_linting = "4.1.0"
# dylint_testing = "4.1.0"

dylint = { git = "https://github.com/trailofbits/dylint" }
dylint_linting = { git = "https://github.com/trailofbits/dylint" }
dylint_internal = { git = "https://github.com/trailofbits/dylint" }
dylint_testing = { git = "https://github.com/trailofbits/dylint" }

# KEEP OUR OWN FORK!
dylint_uitesting = { version = "4.1.0", path = "/Users/tom/apps/dylint_uitesting" }

[workspace.lints.rust.unexpected_cfgs]
level = "deny"
check-cfg = ["cfg(dylint_lib, values(any()))"]

[workspace.metadata.dylint]
libraries = [{ path = "." }]

[package.metadata.rust-analyzer]
rustc_private = true
