[package]
name = "clippy"
version = "0.1.0"
authors = ["Tom Grushka"]
description = "Include clippy lints"
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[features]
rlib = ["dylint_linting/constituent"]

[dependencies]
dylint_internal.workspace = true
dylint_linting.workspace = true
clippy_config.workspace = true
clippy_lints.workspace = true
clippy_utils = { git = "https://github.com/rust-lang/rust-clippy" }
# clippy_utils.workspace = true
declare_clippy_lint.workspace = true
serde_json = "1.0"

[dev-dependencies]
dylint.workspace = true
dylint_internal.workspace = true
dylint_uitesting.workspace = true

anyhow.workspace = true
cargo_metadata = "0.19.2" # pinned by dylint_internal
env_logger = "0.11"
log = "0.4"
tempfile = "3.20"

[package.metadata.rust-analyzer]
rustc_private = true
