[package]
name = "eol_comments"
version = "0.1.0"
authors = ["Tom Grushka"]
description = "Lint for end-of-line comments"
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
clippy_utils.workspace = true
dylint_linting.workspace = true

[dev-dependencies]
dylint_testing.workspace = true

[package.metadata.rust-analyzer]
rustc_private = true
