[package]
name = "eol_comments"
version = "0.1.0"
authors = ["Tom Grushka"]
description = "Lint for end-of-line comments"
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
dylint_linting.workspace = true

[dev-dependencies]
dylint_uitesting.workspace = true

[package.metadata.rust-analyzer]
rustc_private = true
