[package]
name = "nesting_depth"
version = "0.1.0"
authors = ["Tom Grushka"]
description = "Lint for nested if/then/else and other branching that is too many levels deep"
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[features]
rlib = ["dylint_linting/constituent"]

[[example]]
name = "nesting_depth"
path = "ui/main.rs"

[dependencies]
anyhow.workspace = true
dylint_linting.workspace = true
env_logger.workspace = true
log.workspace = true
serde.workspace = true
serde-inline-default.workspace = true

[dev-dependencies]
dylint_uitesting.workspace = true

[package.metadata.rust-analyzer]
rustc_private = true
