[package]
name = "nesting_too_deep"
version = "0.1.0"
authors = ["Tom Grushka"]
description = "Lint for nested if/then/else and other branching that is too many levels deep"
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
dylint_linting.workspace = true
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
dylint_testing.workspace = true

[package.metadata.rust-analyzer]
rustc_private = true
