[package]
name = "nesting_too_deep"
version = "0.1.0"
authors = ["Tom Grushka"]
description = "Lint for nested if/then/else and other branching that is too many levels deep"
edition = "2024"
publish = false

# https://docs.rs/dylint_uitesting/latest/dylint_uitesting/

[lib]
crate-type = ["cdylib"]

[[example]]
name = "nesting_too_deep"
path = "ui/main.rs"

[dependencies]
dylint_linting.workspace = true
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
dylint_uitesting.workspace = true

[package.metadata.rust-analyzer]
rustc_private = true
