[package]
name = "uninlined_format_args"
version = "0.1.0"
authors = ["Tom Grushka"]
description = "Lint for uninlined format args"
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
dylint_linting.workspace = true

[dev-dependencies]
dylint_testing.workspace = true

[package.metadata.rust-analyzer]
rustc_private = true

[[package.metadata.rust-analyzer.rustc_private_crates]]
name = "rustc_hir"
